--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -12,7 +12,6 @@ body {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
 }
 
-/* TITLES */
 .h1 {
     color: white;
     font-size: 36px;
@@ -42,6 +41,15 @@ body {
     font-weight: 400;
 }
 
+.title-small {
+    text-align: center;
+    margin-top: 50px;
+    font-size: 35px;
+    font-weight: 600;
+    color: white;
+    font-weight: bold;
+}
+
 /* BUTTONS */
 .btn {
     height: 40px;
@@ -62,6 +70,14 @@ body {
 .btn.reserved:hover {
     background-color: #4b8ecc;
     transform: scale(1.05);
+}
+
+.image-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 40px;
+    padding: 40px 20px;
 }
 
 .btn-red {
@@ -86,6 +102,49 @@ body {
 }
 
 /* MOVIES */
+
+.image-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 40px;
+    padding: 40px 20px;
+}
+
+.item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #1f1f1f;
+    border-radius: 20px;
+    overflow: hidden;
+    width: 250px;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.item:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 12px 25px rgba(0, 0, 0, 0.6);
+}
+
+.item img {
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+}
+
+.item .info {
+    padding: 15px 10px;
+    text-align: center;
+}
+
+.item .info h3 {
+    margin: 5px 0;
+    font-weight: 500;
+    color: white;
+}
+
 .header-container {
     display: flex;
     flex-direction: row;
