--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -40,6 +40,26 @@ body {
     font-weight: 400;
 }
 
+.h3-center {
+    color: #ffffff;
+    font-size: 16px;
+    margin: 20px 0 0 0;
+    font-weight: 400;
+    text-align: center;
+
+}
+
+.link {
+    color: #0099ff;
+    font-size: 14px;
+    margin: 0 0 10px 0;
+    text-align: center;
+    font-weight: bold;
+    text-decoration: underline;
+    cursor: pointer;
+    pointer-events: auto;
+}
+
 .title-small {
     text-align: center;
     margin-top: 50px;
@@ -110,7 +130,7 @@ body {
     transition: background 0.3s ease, transform 0.2s ease;
     background-color: rgb(207, 42, 42);
     color: white;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 
@@ -258,4 +278,51 @@ body {
 
 .seat.selected {
     background: #00ff62;
+}
+
+.modal-overlay {
+    position: fixed;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.modal {
+    position: relative;
+    background: #0a2636;
+    padding: 30px;
+    border-radius: 12px;
+    width: 350px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    z-index: 1001;
+}
+
+.input {
+    padding: 10px;
+    border-radius: 8px;
+    border: none;
+}
+
+.modal-actions {
+    display: flex;
+    justify-content: space-between;
+}
+
+.success-msg {
+    color: green;
+    text-align: center;
+    margin-top: 10px;
+    font-weight: bold;
+}
+
+.error-msg {
+    color: red;
+    text-align: center;
+    margin-top: 10px;
+    font-weight: bold;
 }
