--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -55,6 +55,7 @@ h3 {
 .title-small {
     text-align: center;
     margin-top: 50px;
+    margin-bottom: 30px;
     font-size: 35px;
     color: white;
     font-weight: bold;
@@ -523,10 +524,9 @@ h3 {
     background: rgb(207, 42, 42);
     color: white;
     border: none;
-    border-radius: 12px;
+    border-radius: 30px;
     padding: 10px 20px;
     font-size: 16px;
-    font-weight: bold;
     cursor: pointer;
     display: inline-flex;
     align-items: center;
@@ -546,19 +546,12 @@ h3 {
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.5);
 }
 
-.btn-add {
-    margin: 15px auto;
-    display: inline-flex;
-    justify-content: center;
-}
-
 .add-film-page {
     min-height: calc(100vh - 80px);
     display: flex;
     justify-content: center;
     align-items: flex-start;
     padding: 60px 20px;
-
 }
 
 .top-icon-delete {
@@ -573,9 +566,6 @@ h3 {
     background-color: rgba(255, 0, 0, 0.9);
     box-shadow: 0 0 12px rgba(255, 0, 0, 0.6);
     transform: scale(1.15);
-}
-
-.top-icon-delete:hover i {
     color: white;
 }
 
@@ -588,12 +578,8 @@ h3 {
     background-color: rgb(255, 255, 255);
     box-shadow: 0 0 10px rgb(255, 255, 255);
     transform: scale(1.15);
-}
-
-.top-icon-edit:hover i {
     color: #000000;
 }
-
 
 .add-movie-page {
     min-height: 100vh;
@@ -602,7 +588,6 @@ h3 {
     align-items: center;
     padding: 20px;
 }
-
 
 .details-modal {
     background: #1f1f1f;
@@ -620,13 +605,6 @@ h3 {
     font-size: 28px;
     font-weight: bold;
     color: white;
-}
-
-.subtitle {
-    text-align: center;
-    font-size: 14px;
-    color: #ffffff;
-    margin-bottom: 25px;
 }
 
 .form-group {
@@ -701,13 +679,12 @@ h3 {
     margin-top: 20px;
 }
 
-
 .btn-add {
     flex: 1;
-    padding: 12px 0;
-    border-radius: 12px;
+    padding: 12px 20px;
+    border-radius: 14px;
     border: none;
-    font-size: 14px;
+    font-size: 15px;
     font-weight: bold;
     cursor: pointer;
     transition: all 0.3s ease;
@@ -721,61 +698,13 @@ h3 {
     box-shadow: 0 4px 12px rgba(207, 42, 42, 0.5);
 }
 
-.btn-cancel {
-    flex: 1;
-    padding: 12px 0;
-    border-radius: 12px;
-    border: none;
-    font-size: 14px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    margin: 0 5px;
-    background-color: rgb(207, 42, 42);
-    color: white;
-}
-
-.btn-cancel:hover {
-    transform: translateY(-2px);
-    box-shadow: 0 4px 12px rgba(207, 42, 42, 0.5);
-}
-
 .form-group input.input::placeholder {
     color: #7f8c8d;
     opacity: 1;
 }
 
-
 .form-group input.input::placeholder {
     color: #ffffff;
-}
-
-
-.btn-add2 {
-    background-color: rgb(207, 42, 42);
-    color: white;
-    border: none;
-    border-radius: 12px;
-
-    padding: 8px 20px;
-    font-size: 16px;
-    font-weight: bold;
-
-    cursor: pointer;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    gap: 8px;
-
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.514);
-    transition: transform 0.2s ease, box-shadow 0.2s ease;
-
-    margin: 10px;
-}
-
-.btn-add2:hover {
-    transform: translateY(-2px);
-    box-shadow: 0 6px 20px rgb(0, 0, 0);
 }
 
 .seances-section {
@@ -915,13 +844,6 @@ h3 {
     color: white;
 }
 
-.edit-movie-page .subtitle {
-    text-align: center;
-    font-size: 14px;
-    color: #ffffff;
-    margin-bottom: 25px;
-}
-
 .edit-movie-page .form-group {
     position: relative;
     display: flex;
@@ -979,21 +901,6 @@ h3 {
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
-}
-
-.edit-movie-page .btn-add,
-.edit-movie-page .btn-cancel {
-    flex: 1;
-    padding: 12px 0;
-    border-radius: 12px;
-    border: none;
-    font-size: 14px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    margin: 0 5px;
-    background-color: rgb(207, 42, 42);
-    color: white;
 }
 
 .edit-movie-page .btn-add:hover,
@@ -1141,8 +1048,8 @@ h3 {
 
 .movie-info h3 {
     margin: 0 0 0.3rem 0;
-    font-size: 1.2rem;
-    color: rgb(235, 25, 25);
+    font-size: 1.5rem;
+    color: #ffffff;
 }
 
 .movie-info p,
@@ -1161,12 +1068,6 @@ h3 {
     text-align: right;
     font-size: 1.1rem;
     color: #fff;
-}
-
-@media (max-width: 600px) {
-    .reservation-item {
-        padding: 0.8rem 1rem;
-    }
 }
 
 .btn-blue {
@@ -1195,27 +1096,16 @@ h3 {
     transform: scale(1.05);
 }
 
-
-
-
-
 .movie-stats {
     padding: 30px;
     color: white;
 }
 
-.title-small {
-    text-align: center;
-    font-size: 36px;
-    margin-bottom: 30px;
-}
-
-/* KPI */
 .kpi-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 20px;
-    margin-bottom: 30px;
+    margin-bottom: 100px;
 }
 
 .kpi-card {
@@ -1231,7 +1121,6 @@ h3 {
     font-size: 26px;
 }
 
-/* Sort */
 .sort-bar {
     text-align: center;
     margin-bottom: 25px;
@@ -1245,8 +1134,6 @@ h3 {
     cursor: pointer;
 }
 
-/* Top 3 cards */
-
 .top-three {
     display: flex;
     gap: 25px;
@@ -1257,37 +1144,37 @@ h3 {
 
 .top-card {
     width: 380px;
-    /* plus large pour top 3 */
     display: flex;
     flex-direction: row;
 }
 
-.top-card .movie-image {
+.movie-image {
     width: 180px;
-    /* image plus large */
     height: 220px;
     object-fit: cover;
     border-radius: 8px 0 0 8px;
 }
 
-.top-card .movie-info {
+.movie-info {
     flex: 1;
-    padding: 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    color: black;
+    color: white;
 }
 
-/* Other cards */
 .cards-container {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    flex-direction: row;
     gap: 20px;
+    justify-content: center;
+    padding: 0 20px;
 }
 
 .movie-card {
     display: flex;
+    width: 400px;
     background: #1f1f1f;
     border-radius: 18px;
     overflow: hidden;
@@ -1295,19 +1182,9 @@ h3 {
     position: relative;
 }
 
-.movie-card .movie-image {
-    width: 140px;
-    aspect-ratio: 7/10;
-    object-fit: cover;
-    border-radius: 8px 0 0 8px;
-}
-
-.movie-card .movie-info {
-    padding: 15px;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+.movie-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 12px 30px rgba(0, 0, 0, 0.7);
 }
 
 .rank {
@@ -1317,26 +1194,29 @@ h3 {
     background: #ffcc00;
     color: black;
     font-weight: bold;
-    padding: 6px 12px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
 }
 
-/* Bars */
 .revenue-bar {
     height: 10px;
     background: rgba(255, 255, 255, .2);
     border-radius: 5px;
     margin-top: 8px;
+    overflow: hidden;
 }
 
 .bar-fill {
     height: 100%;
     background: #ff4d4d;
-    border-radius: 5px;
     transition: width 0.5s ease;
 }
 
-/* Admin actions */
 .admin-actions {
     display: flex;
     gap: 10px;
@@ -1351,15 +1231,10 @@ h3 {
     background: #2a5298;
     color: white;
     cursor: pointer;
+    font-weight: bold;
     transition: background 0.3s;
 }
 
 .admin-actions button:hover {
     background: #3b6fc4;
-}
-
-.warning {
-    color: #ff6b6b;
-    font-weight: bold;
-    margin-top: 5px;
 }
